More bits and bobs

--- a/content/post/2017-06-24-the-trouble-with-tibbles.Rmd
+++ b/content/post/2017-06-24-the-trouble-with-tibbles.Rmd
@@ -14,6 +14,8 @@ data.frames. Class tbl inherits from data.frame, so
 you can use tbls everywhere you use data.frames. 
 Except when you can't. 
 
+<!--more-->
+
 Here's one example that tripped me up recently.
 
 ```{r}
