update ARC GIS post

--- a/content/post/2016-08-11-R-vs.-ArcGIS.md
+++ b/content/post/2016-08-11-R-vs.-ArcGIS.md
@@ -1,8 +1,8 @@
 ---
-layout: post
 title:  R vs. ArcGIS
 date: 2016-08-11 08:25:10
-published: true
+summary: "A student asked: I never use ArcGIS before. What's the limitation of R which ArcGis can do but R can't? And what else R can do in this area except loading area map?"
+slug: R-vs.-ArcGIS
 tags: [R, spatial data]
 ---
 
