--- a/content/post/2016-12-08-ice_age_1970s.md
+++ b/content/post/2016-12-08-ice_age_1970s.md
@@ -28,6 +28,6 @@ It's true that [the global temperature trend flattened out or even decreased dur
 
 There is an *awesome* collection of scanned news articles [here](https://stevengoddard.wordpress.com/1970s-ice-age-scare/), and a similar list with references [here](http://www.populartechnology.net/2013/02/the-1970s-global-cooling-alarmism.html). With a couple exceptions on the first page, these are all media stories, not peer-reviewed publications. A new ice-age made good headlines at least! What were scientists writing at the time? There's a good summary [here](https://www.skepticalscience.com/ice-age-predictions-in-1970s-intermediate.htm), including a reference to a peer-reviewed review of the science at the time. Between 1965 and 1979 7 published articles predicted continued cooling. But 42 articles predicted warming! And over 20 articles predicted no systematic change would occur. Scientists were genuinely uncertain about the future of the climate at the time. 
 
-Part of the reason for the uncertainty had to do with a lack of understanding about how two distinct human drivers of climate would interact with each other. On the one hand there were the first decades of evidence that atmospheric $$CO\_2$$ was increasing. On the other hand there were observations of dramatic increases in aerosol emmisions, particularly $$SO\_2$$. Remember acid rain? The same chemicals responsible for acid rain also have a cooling effect on the atmosphere, and those emissions were dramatically increasing in the early 70's. So the scientific uncertainty reflected these competing drivers. $$CO\_2$$ warms the lower atmosphere, while $$SO\_2$$ cools it. The *scientific* articles predicting a new ice age were forecasting the impacts of continued increases in $$SO\_2$$ ([see this scan](https://stevengoddard.files.wordpress.com/2014/02/screenhunter_127-feb-04-04-44.gif) ). Humanity acted to limit $$SO\_2$$ emissions which began declining around 1980. We acted on $$SO\_2$$ because some impacts were more obvious (decreasing pH in surface waters), and the economic costs smaller than reducing $$CO\_2$$ emissions (although still substantial).
+Part of the reason for the uncertainty had to do with a lack of understanding about how two distinct human drivers of climate would interact with each other. On the one hand there were the first decades of evidence that atmospheric $CO\_2$ was increasing. On the other hand there were observations of dramatic increases in aerosol emmisions, particularly $SO\_2$. Remember acid rain? The same chemicals responsible for acid rain also have a cooling effect on the atmosphere, and those emissions were dramatically increasing in the early 70's. So the scientific uncertainty reflected these competing drivers. $CO\_2$ warms the lower atmosphere, while $SO\_2$ cools it. The *scientific* articles predicting a new ice age were forecasting the impacts of continued increases in $SO\_2$ ([see this scan](https://stevengoddard.files.wordpress.com/2014/02/screenhunter_127-feb-04-04-44.gif) ). Humanity acted to limit $SO\_2$ emissions which began declining around 1980. We acted on $SO\_2$ because some impacts were more obvious (decreasing pH in surface waters), and the economic costs smaller than reducing $CO\_2$ emissions (although still substantial).
 
-So overall the "ice age scare" was a media construction at a time when political discussions were focused on $$SO\_2$$ emissions. It would be interesting to see if those debates stimulated climate scientists to focus more on building long term data records, and to use those data to measure the effects of human and natural drivers on climate change. The available data in the 1970's were quite limited ([see figures at the top](https://stevengoddard.wordpress.com/1970s-ice-age-scare/) ). At that time climate scientists also lacked the most powerful tool for understanding the interacting effects of climate drivers: computational models of the global climate system. 
+So overall the "ice age scare" was a media construction at a time when political discussions were focused on $SO\_2$ emissions. It would be interesting to see if those debates stimulated climate scientists to focus more on building long term data records, and to use those data to measure the effects of human and natural drivers on climate change. The available data in the 1970's were quite limited ([see figures at the top](https://stevengoddard.wordpress.com/1970s-ice-age-scare/) ). At that time climate scientists also lacked the most powerful tool for understanding the interacting effects of climate drivers: computational models of the global climate system. 
