--- a/content/classes/NRES803/readiness.Rmd
+++ b/content/classes/NRES803/readiness.Rmd
@@ -7,8 +7,7 @@ highlight: true
 The following figures and outputs are designed to evaluate your readiness to take NRES 803. Type your answers into a TEXT file (NOT a word document!) using a text editor or something like notepad (Windows) or TextEdit (OS/X) or using the RStudio IDE. Copy the question into the file and place your answer underneath it. Save it in a file with the name "yourlastname_is_ready.txt". 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      fig.path = "assets/")
+knitr::opts_chunk$set(echo = TRUE)
 RIKZ <- read.table("https://unl.box.com/shared/static/pncos8dmjnr27ve1c9f490mon57il9ap.txt", header = TRUE)
 library(ggplot2)
 ```
