--- a/content/classes/NRES803/Week_2/lab_2.Rmd
+++ b/content/classes/NRES803/Week_2/lab_2.Rmd
@@ -3,6 +3,7 @@ title: "Week 2 Lab"
 author: "Drew Tyre"
 date: "2017-08-01"
 output: html_document
+weight: 803021
 ---
 
 ```{r setup, include=FALSE}
