--- a/content/classes/NRES803/Week_1/lab_1.Rmd
+++ b/content/classes/NRES803/Week_1/lab_1.Rmd
@@ -133,11 +133,11 @@ pred.1$upr <- with(pred.1, .fitted + tcrit * .se.fit)
 
 ## put the raw data plot back first, then add
 ## lines and ribbons
-ggplot(gala, aes(x = log(Area), y = log(Species))) + 
-  geom_point(size = 3) + 
-  geom_line(aes(x = log(Area), y = .fitted ), 
+ggplot(gala, aes(x = log(Area))) + 
+  geom_point(aes(y = log(Species)), size = 3) + 
+  geom_line(aes(y = .fitted ), 
             data = pred.1, size = 2, color = "blue") + 
-  geom_ribbon(aes(x = log(Area), ymin = lwr, ymax = upr, y = 0), 
+  geom_ribbon(aes(ymin = lwr, ymax = upr), 
               data = pred.1, alpha = 0.5)
 
 ```
