--- a/content/classes/NRES803/Week_2/homework_2.Rmd
+++ b/content/classes/NRES803/Week_2/homework_2.Rmd
@@ -18,9 +18,7 @@ The data bleaching are in package `NRES803`. These data are derived from a paper
 
 > hint: in R you can use the predict function with options newdata and interval="prediction". See `help(predict.lm)`.
 
-Please do the analyses yourself. Do not use the analysis presented in the paper, although you can refer to the paper for the ecological background. I WILL know if you do not do the analysis yourself! Please submit an R Markdown file named "yourlastname_hw_2.Rmd". You should be able to click the "knit" button in RStudio and have it produce an html file without errors.
+Please do the analyses yourself. Do not use the analysis presented in the paper, although you can refer to the paper for the ecological background. I WILL know if you do not do the analysis yourself! Please submit a compressed file of your RStudio project folder that includes an R Markdown file named "yourlastname_hw_2.Rmd". You should be able to click the "knit" button in RStudio and have it produce an html file without errors.
 
 McWilliams, J et al (2005) Accelerating impacts of temperature-induced coral bleaching in the Caribbean. Ecology 86(5):2055-2060.
-
-Complete Homework and Submit by Midnight Tuesday of week 3.
 
